--- a/daily/7.14/爬虫.md
+++ b/daily/7.14/爬虫.md
@@ -40,7 +40,7 @@
 
 ## 4.数据解析
 
-### re解析
+### re解析——匹配对应格式
 
 ![img](https://img-blog.csdnimg.cn/b805a1c7513342d4b4080c750cc7324c.png?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBAU2FtUm9s,size_20,color_FFFFFF,t_70,g_se,x_16)
 
@@ -51,6 +51,8 @@
 打\.\*游戏——打游戏玩你们游戏爱游戏		贪婪匹配
 
 ### BS4解析–beautiful soup4
+
+匹配标签值
 
 Html标签（typora接触过）
 
@@ -65,7 +67,24 @@ Html标签（typora接触过）
 通过标签名称获取数据
 ```
 
+requests获取网页信息——交给BeautifulSoup(指定html.parser)——从bs对象中拿到数据
 
+### Xpath解析——xml文档
+
+html是xml的子集
+
+| 表达式   | 描述                     |
+| -------- | ------------------------ |
+| nodename | 选取此节点的所有子节点   |
+| /        | 从当前节点选取直接子节点 |
+| //       | 从当前节点选取子孙节点   |
+| .        | 选取当前节点             |
+| . .      | 选取当前节点的父节点     |
+| text()   | 选取文本                 |
+| @        | 选取属性                 |
+| *        | 匹配任何元素节点         |
+| @*       | 匹配任何属性节点         |
+| node()   | 匹配任何类型的节点       |
 
 ## 补充：
 
@@ -82,3 +101,6 @@ Html标签（typora接触过）
 	resp=requests.get(url,verify=False)#去掉安全验证
 	```
 
+## COOKIE
+
+利用requests.session
